# baltrad-wrwp

./: .gitignore  INSTALL  LICENSE  Makefile  configure  configure.in  def.mk.in
lib/: Makefile  wrwp.c  wrwp.h
pywrwp/: Makefile  VPodimVersionConverter.py  baltrad_wrwp_pgf_plugin.py  pywrwp.c  pywrwp.h
test/lib/: xmlrunner.py
test/pytest/: Makefile  WrwpFullTestSuite.py  WrwpTest.py  WrwpTestSuite.py  WrwpXmlTestSuite.py
test/pytest/fixtures/: seang_zdr_qcvol_one_scan_and_elangle_lower_than_wrwp_threshold.h5  selul_pvol_20151114T1615Z.h5
tools/: ci_test.sh  run_python_script.sh  test_wrwp.sh
